# speak-gpt

./: .gitignore  CLAUDE.md  CLAUDE2.md  ERROR_CODES.md  Memory System Plans June 1 2026  N2 Error Investigation.md  Stage 4 Silent Audit Repair  build.gradle  chat-export-plan.md  chat-id-stable-identity-plan.md  corrected-prompt-block.md  document-includes-plan.md  memory-system-integration-plan.md  palette-designer.html  profile-images-plan.md  profile-images-work-order.md  settings.gradle  ui-redesign-plan.md  ui-style-guide.md  voice-chat-build-guide(1).md  whisper-local-plan.md
.github/: style-doc-finalize-trigger
.github/workflows/: android-checks.yml  android-ci.yml  android-debug-build.yml  one-off-style-doc-update.yml  release-beta.yml  release.yml
Memory System/: README.md  app_adaptation_notes.md  archivist_prompt.md  archivist_spec.md  archivist_status_wording_spec.md  companion_memory_schema.json  database_health_build_plan.md  enforcer_librarian_spec.md  example_seed.json  external_memory_analysis_counterplan.md  memory_assistant_design.md  memory_health_round5_phase1_design.md  memory_settings_reorg_spec.md  memory_system_guide.md  owner_approved_rules.md  phase5_rework_work_order.md  phase6_card_suggestions_and_icons_design.md  phase6_memory_assistant_work_order.md  phase6_owner_answers_2026-07-08.md  phase6_unauthorized_strings.md  prompt_assembly_template.md  rag_engine_work_order.md  roleplay_cards_and_tags_draft.md  roleplay_cards_and_tags_spec.md  roleplay_memory_deletion_fix.md  seed_public_template.json  sqlite_table_plan.md  troubleshooting_guide.md
Memory System/OUTDATED_do_not_reference/: README.md  archivist_prompt.md  archivist_spec.md  memory_system_guide.md
app/: build.gradle  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: memory_seed_template.json
app/src/main/cpp/: CMakeLists.txt  phosphor_whisper_jni.cpp  webrtc_vad_jni.cpp
app/src/main/java/org/teslasoft/assistant/app/: MainApplication.kt
app/src/main/java/org/teslasoft/assistant/preferences/: ActivationPromptPreferences.kt  ApiEndpointPreferences.kt  (+18 more)
app/src/main/java/org/teslasoft/core/: CrashHandler.kt
app/src/main/res/anim/: anim_hold.xml  slide_in_right.xml  slide_out_right.xml
app/src/main/res/drawable/: assistant_clear.xml  assistant_clear_amoled.xml  assistant_clear_v2.xml  assistant_normal.xml  avd_anim.xml  avd_anim_v2.xml  avd_anim_v3.xml  avd_static.xml  avd_static_v2.xml  avd_static_v3.xml  background_ripple.xml  bg_card_count.xml  bg_dropdown_box.xml  bg_field_box.xml  bg_gallery_locked_badge.xml  bg_gallery_selected_badge.xml  bg_gallery_tile_label.xml  bg_gallery_tile_placeholder.xml  bg_shape_preview_swatch.xml  bg_suggestion_outline.xml  border_quick_tile_bottom.xml  border_quick_tile_middle.xml  border_quick_tile_top.xml  bottom_navigation_tint.xml  box_stroke_color.xml  bt_top.xml  btn_accent.xml  btn_accent_24.xml  btn_accent_4.xml  btn_accent_50.xml  btn_accent_50_v2.xml  btn_accent_50_v3.xml  btn_accent_assistant_actions.xml  btn_accent_bottom.xml  btn_accent_bottom_left.xml  btn_accent_bottom_right.xml  btn_accent_center.xml  btn_accent_icon_large.xml  btn_accent_icon_large_100.xml  btn_accent_outline_v2.xml  (+136 more)
app/src/main/res/layout/: activity_about.xml  activity_activation.xml  activity_activation_prompt_list.xml  activity_advanced_memory_settings.xml  activity_ai_system_settings.xml  activity_alert_debug_menu.xml  activity_api_endpoint_editor.xml  activity_api_endpoint_list.xml  activity_audio_debugging.xml  activity_campaign_detail.xml  activity_card_entry_editor.xml  activity_character_card.xml  activity_characters.xml  activity_chat.xml  activity_chat_storage_locked.xml  activity_companion_detail.xml  activity_crash.xml  activity_default_images.xml  activity_edit_persona.xml  activity_edit_user_persona.xml  activity_local_whisper_manage.xml  activity_local_whisper_models.xml  activity_logit_bias_config_list.xml  activity_logit_bias_list.xml  activity_logs.xml  activity_lorebook_debug.xml  activity_lorebook_entries.xml  activity_lorebook_list.xml  activity_lorebooks_list.xml  activity_main.xml  activity_memory_assistant.xml  activity_memory_assistant_advanced.xml  activity_memory_assistant_advanced_settings.xml  activity_memory_backup_restore.xml  activity_memory_controls.xml  activity_memory_editor.xml  activity_memory_filter_panel.xml  activity_memory_list.xml  activity_memory_list_simple.xml  activity_memory_manager.xml  (+79 more)
app/src/main/res/menu/: bottom_menu.xml  bottom_menu_beta.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
teslasoft-id/: build.gradle
(+359 files in other folders)
